Task 4 creation of individual plot

--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -591,6 +591,303 @@
     "# Run the function with the specified file path\n",
     "visualize_and_save_individual_routes(\"data/map_matching_1500.csv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de76701",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d12b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error parsing geometry: list index out of range\n",
+      "Error parsing geometry: IllegalArgumentException: point array must contain 0 or >1 elements\n",
+      "\n",
+      "Error parsing geometry: IllegalArgumentException: point array must contain 0 or >1 elements\n",
+      "\n",
+      "Individual map for Trip 1 saved to data/Task4\\fmap_route_1.html\n",
+      "Individual map for Trip 2 saved to data/Task4\\fmap_route_2.html\n",
+      "Individual map for Trip 3 saved to data/Task4\\fmap_route_3.html\n",
+      "Individual map for Trip 4 saved to data/Task4\\fmap_route_4.html\n",
+      "Individual map for Trip 5 saved to data/Task4\\fmap_route_5.html\n",
+      "Individual map for Trip 6 saved to data/Task4\\fmap_route_6.html\n",
+      "Individual map for Trip 7 saved to data/Task4\\fmap_route_7.html\n",
+      "Individual map for Trip 8 saved to data/Task4\\fmap_route_8.html\n",
+      "Individual map for Trip 9 saved to data/Task4\\fmap_route_9.html\n",
+      "Individual map for Trip 10 saved to data/Task4\\fmap_route_10.html\n",
+      "Individual map for Trip 11 saved to data/Task4\\fmap_route_11.html\n",
+      "Individual map for Trip 12 saved to data/Task4\\fmap_route_12.html\n",
+      "Individual map for Trip 13 saved to data/Task4\\fmap_route_13.html\n",
+      "Individual map for Trip 14 saved to data/Task4\\fmap_route_14.html\n",
+      "Individual map for Trip 15 saved to data/Task4\\fmap_route_15.html\n",
+      "Combined map saved to data\\Mapped_Trajectories_of_first_15_trips.html\n",
+      "Visualization completed successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from shapely.geometry import LineString\n",
+    "import os\n",
+    "\n",
+    "def parse_mgeom(value):\n",
+    "    \"\"\"Parse LINESTRING format into a LineString object.\"\"\"\n",
+    "    try:\n",
+    "        if value.startswith(\"LINESTRING\"):\n",
+    "            coords = value.replace(\"LINESTRING(\", \"\").replace(\")\", \"\").split(\",\")\n",
+    "            coords = [(float(coord.split()[0]), float(coord.split()[1])) for coord in coords]\n",
+    "            return LineString(coords)\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error parsing geometry: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def calculate_boundaries(current_x_max, current_y_max, current_x_min, current_y_min, is_first, longitude, latitude):\n",
+    "    if is_first:\n",
+    "        current_x_min = current_x_max = longitude\n",
+    "        current_y_min = current_y_max = latitude\n",
+    "        is_first = False\n",
+    "    else:\n",
+    "        current_x_max = max(current_x_max, longitude)\n",
+    "        current_x_min = min(current_x_min, longitude)\n",
+    "        current_y_max = max(current_y_max, latitude)\n",
+    "        current_y_min = min(current_y_min, latitude)\n",
+    "    return current_x_max, current_y_max, current_x_min, current_y_min, is_first\n",
+    "\n",
+    "def visualize_routes(file_path, save_combined=True, save_individual=True, plot_lines=True, plot_points=True):\n",
+    "    \"\"\"\n",
+    "    Visualize the first 15 routes from the CSV file by creating a combined map and individual maps.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path (str): Path to the CSV file containing route data.\n",
+    "    - save_combined (bool): Whether to save the combined map.\n",
+    "    - save_individual (bool): Whether to save individual maps for each route.\n",
+    "    - plot_lines (bool): Whether to plot lines between points in the routes.\n",
+    "    - plot_points (bool): Whether to plot individual points in the routes.\n",
+    "    \"\"\"\n",
+    "    # Check if the file exists\n",
+    "    if not os.path.exists(file_path):\n",
+    "        print(f\"File not found: {file_path}\")\n",
+    "        return\n",
+    "\n",
+    "    # Load and parse geometries\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    df['geometry'] = df['mgeom'].apply(parse_mgeom)\n",
+    "    df = df.dropna(subset=['geometry'])\n",
+    "    if df.empty:\n",
+    "        print(\"No valid geometries found.\")\n",
+    "        return\n",
+    "\n",
+    "    # Initialize boundaries and color mapping for routes\n",
+    "    current_x_max = current_y_max = current_x_min = current_y_min = None\n",
+    "    is_first = True\n",
+    "    num_routes = min(15, len(df))\n",
+    "    colors = plt.cm.jet(np.linspace(0, 1, num_routes))\n",
+    "\n",
+    "    # Calculate boundaries based on route data\n",
+    "    for i, geometry in enumerate(df['geometry'].head(num_routes)):\n",
+    "        x, y = geometry.xy\n",
+    "        for lon, lat in zip(x, y):\n",
+    "            current_x_max, current_y_max, current_x_min, current_y_min, is_first = calculate_boundaries(\n",
+    "                current_x_max, current_y_max, current_x_min, current_y_min, is_first, lon, lat\n",
+    "            )\n",
+    "\n",
+    "    # Adjust boundaries with padding for the map view\n",
+    "    if is_first:\n",
+    "        # Default boundaries if no points were processed\n",
+    "        current_x_min, current_x_max = -8.7, -8.5  \n",
+    "        current_y_min, current_y_max = 41.1, 41.3\n",
+    "    else:\n",
+    "        x_padding = (current_x_max - current_x_min) * 0.05\n",
+    "        y_padding = (current_y_max - current_y_min) * 0.05\n",
+    "        current_x_min -= x_padding\n",
+    "        current_x_max += x_padding\n",
+    "        current_y_min -= y_padding\n",
+    "        current_y_max += y_padding\n",
+    "\n",
+    "    # Generate a color list in hex format for consistency with Folium\n",
+    "    colors_hex = [\n",
+    "        f'#{int(color[0]*255):02x}{int(color[1]*255):02x}{int(color[2]*255):02x}'\n",
+    "        for color in colors\n",
+    "    ]\n",
+    "\n",
+    "    # Directory to save individual route maps\n",
+    "    individual_dir = 'data/Task4'\n",
+    "    if not os.path.exists(individual_dir):\n",
+    "        os.makedirs(individual_dir)\n",
+    "\n",
+    "    # Create a combined Folium map if required\n",
+    "    if save_combined:\n",
+    "        combined_map = folium.Map(\n",
+    "            location=[(current_y_max + current_y_min) / 2, (current_x_max + current_x_min) / 2],\n",
+    "            zoom_start=13,\n",
+    "            # tiles=\"cartodbpositron\",\n",
+    "            max_bounds=True\n",
+    "        )\n",
+    "        combined_map.fit_bounds([[current_y_min, current_x_min], [current_y_max, current_x_max]])\n",
+    "\n",
+    "    # Iterate through each route to add to the combined map and save individually\n",
+    "    for idx, geometry in enumerate(df['geometry'].head(num_routes)):\n",
+    "        lcoord = list(zip(*geometry.xy))  # Convert LineString to list of coordinates (lon, lat)\n",
+    "        lcoord = [(lat, lon) for lon, lat in lcoord]  # Convert to (lat, lon) tuples for Folium\n",
+    "        color = colors_hex[idx]\n",
+    "\n",
+    "        # Add to combined map\n",
+    "        if save_combined:\n",
+    "            feature_group = folium.FeatureGroup(name=f'Trip {idx + 1}')\n",
+    "\n",
+    "            # Add polyline for the route if plot_lines is enabled\n",
+    "            if plot_lines:\n",
+    "                folium.PolyLine(\n",
+    "                    locations=lcoord,\n",
+    "                    color=color,\n",
+    "                    weight=3,\n",
+    "                    opacity=0.7\n",
+    "                ).add_to(feature_group)\n",
+    "\n",
+    "            # Add circle markers for each point if plot_points is enabled\n",
+    "            if plot_points:\n",
+    "                for point in lcoord:\n",
+    "                    folium.CircleMarker(\n",
+    "                        location=point,\n",
+    "                        radius=3,\n",
+    "                        color=color,\n",
+    "                        fill=True,\n",
+    "                        fill_color=color,\n",
+    "                        fill_opacity=1\n",
+    "                    ).add_to(feature_group)\n",
+    "\n",
+    "            # Highlight start and end points\n",
+    "            folium.CircleMarker(\n",
+    "                location=lcoord[0],\n",
+    "                radius=5,\n",
+    "                color='green',\n",
+    "                fill=True,\n",
+    "                fill_color='green',\n",
+    "                fill_opacity=1,\n",
+    "                tooltip=f'Start Trip {idx + 1}'\n",
+    "            ).add_to(feature_group)\n",
+    "\n",
+    "            folium.CircleMarker(\n",
+    "                location=lcoord[-1],\n",
+    "                radius=5,\n",
+    "                color='red',\n",
+    "                fill=True,\n",
+    "                fill_color='red',\n",
+    "                fill_opacity=1,\n",
+    "                tooltip=f'End Trip {idx + 1}'\n",
+    "            ).add_to(feature_group)\n",
+    "\n",
+    "            feature_group.add_to(combined_map)\n",
+    "\n",
+    "        # Save individual map\n",
+    "        if save_individual:\n",
+    "            # Create a Folium map centered on the route's first point\n",
+    "            individual_map = folium.Map(\n",
+    "                location=[lcoord[0][0], lcoord[0][1]],\n",
+    "                zoom_start=14,\n",
+    "                tiles=\"cartodbpositron\"\n",
+    "            )\n",
+    "\n",
+    "            # Adjust map bounds to fit the route\n",
+    "            latitudes = [point[0] for point in lcoord]\n",
+    "            longitudes = [point[1] for point in lcoord]\n",
+    "            bounds = [[min(latitudes), min(longitudes)], [max(latitudes), max(longitudes)]]\n",
+    "            individual_map.fit_bounds(bounds)\n",
+    "\n",
+    "            # Create a feature group for the current route\n",
+    "            individual_fg = folium.FeatureGroup(name=f'Trip {idx + 1}')\n",
+    "\n",
+    "            # Add polyline for the route if plot_lines is enabled\n",
+    "            if plot_lines:\n",
+    "                folium.PolyLine(\n",
+    "                    locations=lcoord,\n",
+    "                    color=color,\n",
+    "                    weight=3,\n",
+    "                    opacity=0.7\n",
+    "                ).add_to(individual_fg)\n",
+    "\n",
+    "            # Add circle markers for each point if plot_points is enabled\n",
+    "            if plot_points:\n",
+    "                for point in lcoord:\n",
+    "                    folium.CircleMarker(\n",
+    "                        location=point,\n",
+    "                        radius=3,\n",
+    "                        color=color,\n",
+    "                        fill=True,\n",
+    "                        fill_color=color,\n",
+    "                        fill_opacity=1\n",
+    "                    ).add_to(individual_fg)\n",
+    "\n",
+    "            # Highlight start and end points\n",
+    "            folium.CircleMarker(\n",
+    "                location=lcoord[0],\n",
+    "                radius=5,\n",
+    "                color='green',\n",
+    "                fill=True,\n",
+    "                fill_color='green',\n",
+    "                fill_opacity=1,\n",
+    "                tooltip=f'Start Trip {idx + 1}'\n",
+    "            ).add_to(individual_fg)\n",
+    "\n",
+    "            folium.CircleMarker(\n",
+    "                location=lcoord[-1],\n",
+    "                radius=5,\n",
+    "                color='red',\n",
+    "                fill=True,\n",
+    "                fill_color='red',\n",
+    "                fill_opacity=1,\n",
+    "                tooltip=f'End Trip {idx + 1}'\n",
+    "            ).add_to(individual_fg)\n",
+    "\n",
+    "            # Add feature group to the individual map\n",
+    "            individual_fg.add_to(individual_map)\n",
+    "\n",
+    "            # Add layer control (optional for individual maps)\n",
+    "            folium.LayerControl().add_to(individual_map)\n",
+    "\n",
+    "            # Define output path for individual map\n",
+    "            individual_output_path = os.path.join(individual_dir, f'fmap_route_{idx + 1}.html')\n",
+    "            individual_map.save(individual_output_path)\n",
+    "            print(f\"Individual map for Trip {idx + 1} saved to {individual_output_path}\")\n",
+    "\n",
+    "    # Finalize and save the combined map\n",
+    "    if save_combined:\n",
+    "        # Add layer control to the combined map\n",
+    "        folium.LayerControl().add_to(combined_map)\n",
+    "\n",
+    "        # Define output path for combined map\n",
+    "        combined_output_dir = 'data'\n",
+    "        if not os.path.exists(combined_output_dir):\n",
+    "            os.makedirs(combined_output_dir)\n",
+    "        combined_output_path = os.path.join(combined_output_dir, 'Mapped_Trajectories_of_first_15_trips.html')\n",
+    "        combined_map.save(combined_output_path)\n",
+    "        print(f\"Combined map saved to {combined_output_path}\")\n",
+    "\n",
+    "    print(\"Visualization completed successfully.\")\n",
+    "\n",
+    "# Run the function with the specified file path\n",
+    "visualize_routes(\n",
+    "    file_path=\"data/map_matching_1500.csv\",\n",
+    "    save_combined=True,      # Set to True to save the combined map\n",
+    "    save_individual=True,    # Set to True to save individual maps\n",
+    "    plot_lines=True,         # Set to True to plot lines between points\n",
+    "    plot_points=True         # Set to True to plot individual points\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
