Task2 & Task4 plot modification

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -170,7 +170,6 @@
    ],
    "source": [
     "#'CartoDB positron' Folium Plot\n",
-    "\n",
     "# Initialize variables\n",
     "trajectories = []\n",
     "trajectory_count = 0\n",
@@ -216,8 +215,6 @@
     "\n",
     "# Generate a color map with 15 distinct colors\n",
     "color_map = plt.cm.jet(np.linspace(0, 1, 15))  \n",
-    "\n",
-    "# Disable plotting of lines\n",
     "PLOT_LINES = False  \n",
     "\n",
     "# Plot the first 15 trajectories on the Folium map\n",
@@ -285,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "xMin: -8.689086, yMin: 41.134158, xMax: -8.562348, yMax: 41.180517\n",
-      "Interactive map with legend saved to data\\GPS_Trajectories_First_15_Trips_with_Legend.html\n"
+      "Interactive map with legend saved to data\\GPS_Trajectories_First_15_Trips_Folium2.html\n"
      ]
     }
    ],
@@ -338,10 +335,7 @@
     "\n",
     "print(f'xMin: {x_min}, yMin: {y_min}, xMax: {x_max}, yMax: {y_max}')\n",
     "\n",
-    "# Initialize the Folium map\n",
     "f = folium.Figure(width=1500, height=1000)\n",
-    "\n",
-    "# Calculate the center of the map\n",
     "map_center = [(y_min + y_max) / 2, (x_min + x_max) / 2]\n",
     "\n",
     "m = folium.Map(location=map_center, zoom_start=14, zoom_control=False).add_to(f)\n",
@@ -405,18 +399,207 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff85469",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f82b0abb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xMin: -8.689086, yMin: 41.134158, xMax: -8.562348, yMax: 41.180517\n",
+      "Individual scatter map for Trip 1 saved to data/Task2/individual\\GPS_Trajectory_Trip_1.html\n",
+      "Individual scatter map for Trip 2 saved to data/Task2/individual\\GPS_Trajectory_Trip_2.html\n",
+      "Individual scatter map for Trip 3 saved to data/Task2/individual\\GPS_Trajectory_Trip_3.html\n",
+      "Individual scatter map for Trip 4 saved to data/Task2/individual\\GPS_Trajectory_Trip_4.html\n",
+      "Individual scatter map for Trip 5 saved to data/Task2/individual\\GPS_Trajectory_Trip_5.html\n",
+      "Individual scatter map for Trip 6 saved to data/Task2/individual\\GPS_Trajectory_Trip_6.html\n",
+      "Individual scatter map for Trip 7 saved to data/Task2/individual\\GPS_Trajectory_Trip_7.html\n",
+      "Individual scatter map for Trip 8 saved to data/Task2/individual\\GPS_Trajectory_Trip_8.html\n",
+      "Individual scatter map for Trip 9 saved to data/Task2/individual\\GPS_Trajectory_Trip_9.html\n",
+      "Individual scatter map for Trip 10 saved to data/Task2/individual\\GPS_Trajectory_Trip_10.html\n",
+      "Individual scatter map for Trip 11 saved to data/Task2/individual\\GPS_Trajectory_Trip_11.html\n",
+      "Individual scatter map for Trip 12 saved to data/Task2/individual\\GPS_Trajectory_Trip_12.html\n",
+      "Individual scatter map for Trip 13 saved to data/Task2/individual\\GPS_Trajectory_Trip_13.html\n",
+      "Individual scatter map for Trip 14 saved to data/Task2/individual\\GPS_Trajectory_Trip_14.html\n",
+      "Individual scatter map for Trip 15 saved to data/Task2/individual\\GPS_Trajectory_Trip_15.html\n",
+      "All individual scatter maps have been saved successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import folium\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def calculate_boundaries(current_x_max, current_y_max, current_x_min, current_y_min, is_first, longitude, latitude):\n",
+    "    \"\"\"\n",
+    "    Update the map boundaries based on the current point.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - current_x_max, current_y_max, current_x_min, current_y_min (float): Current boundary values.\n",
+    "    - is_first (bool): Flag indicating if the current point is the first point.\n",
+    "    - longitude, latitude (float): Coordinates of the current point.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Updated boundary values and the is_first flag.\n",
+    "    \"\"\"\n",
+    "    if is_first:\n",
+    "        current_x_min = current_x_max = longitude\n",
+    "        current_y_min = current_y_max = latitude\n",
+    "        is_first = False\n",
+    "    else:\n",
+    "        current_x_max = max(current_x_max, longitude)\n",
+    "        current_x_min = min(current_x_min, longitude)\n",
+    "        current_y_max = max(current_y_max, latitude)\n",
+    "        current_y_min = min(current_y_min, latitude)\n",
+    "    return current_x_max, current_y_max, current_x_min, current_y_min, is_first\n",
+    "\n",
+    "def visualize_and_save_individual_trajectories(\n",
+    "    file_path,\n",
+    "    output_dir='data/Task2',\n",
+    "    num_routes=15,\n",
+    "    plot_points=True\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Visualize the first `num_routes` trajectories by creating individual scatter plots.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path (str): Path to the CSV file containing trajectory data.\n",
+    "    - output_dir (str): Directory to save the individual maps.\n",
+    "    - num_routes (int): Number of trajectories to process (default is 15).\n",
+    "    - plot_points (bool): Whether to plot individual points in the trajectories.\n",
+    "    \"\"\"\n",
+    "    # Ensure the output directory exists\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "    # Load the first `num_routes` trajectories from the CSV\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path, nrows=num_routes)\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"File not found: {file_path}\")\n",
+    "        return\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"No data found in the file: {file_path}\")\n",
+    "        return\n",
+    "\n",
+    "    trajectories = []\n",
+    "    trajectory_count = 0\n",
+    "    x_max = y_max = x_min = y_min = 0\n",
+    "    is_first = True\n",
+    "\n",
+    "    for polyline in df['POLYLINE']:\n",
+    "        polyline = polyline.strip()[2:-2]  # Remove the surrounding brackets and quotes\n",
+    "        trajectory = []\n",
+    "\n",
+    "        if len(polyline) <= 2:\n",
+    "            print(f'Skip empty row {trajectory_count + 1}: Length={len(polyline)}, Element={polyline}')\n",
+    "        else:\n",
+    "            for coordinate in polyline.split('],['):\n",
+    "                try:\n",
+    "                    longitude, latitude = map(float, coordinate.strip().split(','))\n",
+    "                    trajectory.append((latitude, longitude))  # (lat, lon) for Folium\n",
+    "                    x_max, y_max, x_min, y_min, is_first = calculate_boundaries(\n",
+    "                        x_max, y_max, x_min, y_min, is_first, longitude, latitude)\n",
+    "                except ValueError as e:\n",
+    "                    print(f'Error parsing coordinate \"{coordinate}\": {e}')\n",
+    "\n",
+    "        trajectories.append(trajectory)\n",
+    "        trajectory_count += 1\n",
+    "\n",
+    "    if trajectory_count == 0:\n",
+    "        print(\"No valid trajectories found.\")\n",
+    "        return\n",
+    "\n",
+    "    print(f'xMin: {x_min}, yMin: {y_min}, xMax: {x_max}, yMax: {y_max}')\n",
+    "\n",
+    "    # Generate a color map with `num_routes` distinct colors\n",
+    "    color_map = plt.cm.jet(np.linspace(0, 1, num_routes))\n",
+    "    colors_hex = [\n",
+    "        f'#{int(color[0]*255):02x}{int(color[1]*255):02x}{int(color[2]*255):02x}'\n",
+    "        for color in color_map\n",
+    "    ]\n",
+    "\n",
+    "    # Iterate through each trajectory to create and save individual scatter maps\n",
+    "    for idx, trajectory in enumerate(trajectories):\n",
+    "        if not trajectory:\n",
+    "            print(f\"Skipping empty trajectory {idx + 1}\")\n",
+    "            continue\n",
+    "\n",
+    "        color = colors_hex[idx]\n",
+    "\n",
+    "        # Create a Folium map centered on the trajectory's first point\n",
+    "        individual_map = folium.Map(\n",
+    "            location=trajectory[0],\n",
+    "            zoom_start=14,\n",
+    "            # tiles=\"cartodbpositron\"\n",
+    "        )\n",
+    "\n",
+    "        # Adjust map bounds to fit the trajectory\n",
+    "        latitudes = [point[0] for point in trajectory]\n",
+    "        longitudes = [point[1] for point in trajectory]\n",
+    "        bounds = [[min(latitudes), min(longitudes)], [max(latitudes), max(longitudes)]]\n",
+    "        individual_map.fit_bounds(bounds)\n",
+    "\n",
+    "        # Create a feature group for the current trajectory\n",
+    "        feature_group = folium.FeatureGroup(name=f'Trip {idx + 1}')\n",
+    "\n",
+    "        # Add scatter points for the trajectory\n",
+    "        if plot_points:\n",
+    "            for point in trajectory:\n",
+    "                folium.CircleMarker(\n",
+    "                    location=point,\n",
+    "                    radius=3,\n",
+    "                    color=color,\n",
+    "                    fill=True,\n",
+    "                    fill_color=color,\n",
+    "                    fill_opacity=0.7,\n",
+    "                    weight=1\n",
+    "                ).add_to(feature_group)\n",
+    "\n",
+    "        # Highlight start and end points\n",
+    "        folium.CircleMarker(\n",
+    "            location=trajectory[0],\n",
+    "            radius=5,\n",
+    "            color='green',\n",
+    "            fill=True,\n",
+    "            fill_color='green',\n",
+    "            fill_opacity=1,\n",
+    "            tooltip=f'Start Trip {idx + 1}'\n",
+    "        ).add_to(feature_group)\n",
+    "\n",
+    "        folium.CircleMarker(\n",
+    "            location=trajectory[-1],\n",
+    "            radius=5,\n",
+    "            color='red',\n",
+    "            fill=True,\n",
+    "            fill_color='red',\n",
+    "            fill_opacity=1,\n",
+    "            tooltip=f'End Trip {idx + 1}'\n",
+    "        ).add_to(feature_group)\n",
+    "\n",
+    "        # Add the feature group to the individual map\n",
+    "        feature_group.add_to(individual_map)\n",
+    "\n",
+    "        # Add layer control (optional for individual maps)\n",
+    "        folium.LayerControl().add_to(individual_map)\n",
+    "\n",
+    "        # Save the individual map\n",
+    "        individual_output_path = os.path.join(output_dir, f'GPS_Trajectory_Trip_{idx + 1}.html')\n",
+    "        individual_map.save(individual_output_path)\n",
+    "        print(f\"Individual scatter map for Trip {idx + 1} saved to {individual_output_path}\")\n",
+    "\n",
+    "    print(\"All individual scatter maps have been saved successfully.\")\n",
+    "\n",
+    "# Run the function with the specified file path\n",
+    "visualize_and_save_individual_trajectories(\n",
+    "    file_path=\"data/train-1500.csv\",\n",
+    "    output_dir='data/Task2',\n",
+    "    num_routes=15,\n",
+    "    plot_points=True\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
