Task2 & Task4 plot modification

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -407,54 +407,27 @@
      "output_type": "stream",
      "text": [
       "xMin: -8.689086, yMin: 41.134158, xMax: -8.562348, yMax: 41.180517\n",
-      "Individual scatter map for Trip 1 saved to data/Task2/individual\\GPS_Trajectory_Trip_1.html\n",
-      "Individual scatter map for Trip 2 saved to data/Task2/individual\\GPS_Trajectory_Trip_2.html\n",
-      "Individual scatter map for Trip 3 saved to data/Task2/individual\\GPS_Trajectory_Trip_3.html\n",
-      "Individual scatter map for Trip 4 saved to data/Task2/individual\\GPS_Trajectory_Trip_4.html\n",
-      "Individual scatter map for Trip 5 saved to data/Task2/individual\\GPS_Trajectory_Trip_5.html\n",
-      "Individual scatter map for Trip 6 saved to data/Task2/individual\\GPS_Trajectory_Trip_6.html\n",
-      "Individual scatter map for Trip 7 saved to data/Task2/individual\\GPS_Trajectory_Trip_7.html\n",
-      "Individual scatter map for Trip 8 saved to data/Task2/individual\\GPS_Trajectory_Trip_8.html\n",
-      "Individual scatter map for Trip 9 saved to data/Task2/individual\\GPS_Trajectory_Trip_9.html\n",
-      "Individual scatter map for Trip 10 saved to data/Task2/individual\\GPS_Trajectory_Trip_10.html\n",
-      "Individual scatter map for Trip 11 saved to data/Task2/individual\\GPS_Trajectory_Trip_11.html\n",
-      "Individual scatter map for Trip 12 saved to data/Task2/individual\\GPS_Trajectory_Trip_12.html\n",
-      "Individual scatter map for Trip 13 saved to data/Task2/individual\\GPS_Trajectory_Trip_13.html\n",
-      "Individual scatter map for Trip 14 saved to data/Task2/individual\\GPS_Trajectory_Trip_14.html\n",
-      "Individual scatter map for Trip 15 saved to data/Task2/individual\\GPS_Trajectory_Trip_15.html\n",
+      "Individual scatter map for Trip 1 saved to data/Task2\\GPS_Trajectory_Trip_1.html\n",
+      "Individual scatter map for Trip 2 saved to data/Task2\\GPS_Trajectory_Trip_2.html\n",
+      "Individual scatter map for Trip 3 saved to data/Task2\\GPS_Trajectory_Trip_3.html\n",
+      "Individual scatter map for Trip 4 saved to data/Task2\\GPS_Trajectory_Trip_4.html\n",
+      "Individual scatter map for Trip 5 saved to data/Task2\\GPS_Trajectory_Trip_5.html\n",
+      "Individual scatter map for Trip 6 saved to data/Task2\\GPS_Trajectory_Trip_6.html\n",
+      "Individual scatter map for Trip 7 saved to data/Task2\\GPS_Trajectory_Trip_7.html\n",
+      "Individual scatter map for Trip 8 saved to data/Task2\\GPS_Trajectory_Trip_8.html\n",
+      "Individual scatter map for Trip 9 saved to data/Task2\\GPS_Trajectory_Trip_9.html\n",
+      "Individual scatter map for Trip 10 saved to data/Task2\\GPS_Trajectory_Trip_10.html\n",
+      "Individual scatter map for Trip 11 saved to data/Task2\\GPS_Trajectory_Trip_11.html\n",
+      "Individual scatter map for Trip 12 saved to data/Task2\\GPS_Trajectory_Trip_12.html\n",
+      "Individual scatter map for Trip 13 saved to data/Task2\\GPS_Trajectory_Trip_13.html\n",
+      "Individual scatter map for Trip 14 saved to data/Task2\\GPS_Trajectory_Trip_14.html\n",
+      "Individual scatter map for Trip 15 saved to data/Task2\\GPS_Trajectory_Trip_15.html\n",
       "All individual scatter maps have been saved successfully.\n"
      ]
     }
    ],
    "source": [
-    "import folium\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "def calculate_boundaries(current_x_max, current_y_max, current_x_min, current_y_min, is_first, longitude, latitude):\n",
-    "    \"\"\"\n",
-    "    Update the map boundaries based on the current point.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - current_x_max, current_y_max, current_x_min, current_y_min (float): Current boundary values.\n",
-    "    - is_first (bool): Flag indicating if the current point is the first point.\n",
-    "    - longitude, latitude (float): Coordinates of the current point.\n",
-    "\n",
-    "    Returns:\n",
-    "    - Updated boundary values and the is_first flag.\n",
-    "    \"\"\"\n",
-    "    if is_first:\n",
-    "        current_x_min = current_x_max = longitude\n",
-    "        current_y_min = current_y_max = latitude\n",
-    "        is_first = False\n",
-    "    else:\n",
-    "        current_x_max = max(current_x_max, longitude)\n",
-    "        current_x_min = min(current_x_min, longitude)\n",
-    "        current_y_max = max(current_y_max, latitude)\n",
-    "        current_y_min = min(current_y_min, latitude)\n",
-    "    return current_x_max, current_y_max, current_x_min, current_y_min, is_first\n",
+    "#individual plot\n",
     "\n",
     "def visualize_and_save_individual_trajectories(\n",
     "    file_path,\n",
