--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "85d12b1c",
    "metadata": {},
    "outputs": [
@@ -491,7 +491,7 @@
     "            individual_map = folium.Map(\n",
     "                location=[lcoord[0][0], lcoord[0][1]],\n",
     "                zoom_start=14,\n",
-    "                tiles=\"cartodbpositron\"\n",
+    "                # tiles=\"cartodbpositron\"\n",
     "            )\n",
     "\n",
     "            # Adjust map bounds to fit the route\n",
@@ -574,10 +574,10 @@
     "# Run the function with the specified file path\n",
     "visualize_routes(\n",
     "    file_path=\"data/map_matching_1500.csv\",\n",
-    "    save_combined=True,      # Set to True to save the combined map\n",
-    "    save_individual=True,    # Set to True to save individual maps\n",
-    "    plot_lines=True,         # Set to True to plot lines between points\n",
-    "    plot_points=True         # Set to True to plot individual points\n",
+    "    save_combined=True,      \n",
+    "    save_individual=True,    \n",
+    "    plot_lines=True,         \n",
+    "    plot_points=True         \n",
     ")\n"
    ]
   }
